crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_delete_session_confirm.snap
---
source: crates/app/src/tui/mod.rs
expression: render(&mut app)
---
 Sessions — current: default
▶   CL  old game  (2)  Warhammer, Marauder











                    ╔ Confirm ═════════════════════════════════════════════════╗
                    ║Delete session 'old game'? (y/n)                          ║
                    ║y = yes    n / Esc = no                                   ║
                    ╚══════════════════════════════════════════════════════════╝












 [↑↓] sel  [Enter] load  [n] new  [A] AS  [O] OV  [B] SBF  [F] BF  [C] ACS  [r] rename  [D] del  [Es
