crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_dice_full_cluster_table.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 762
expression: screen
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
          ╔ Dice reference ═════════════════════════════════════════════════════════════╗░░░░░░░░░░│
          ║ Cluster    Full Table    Hit Location                                       ║          │
          ║                                                                             ║          │
          ║ sz  2  3  4  5  6  7  8  9 10 11 12 │  sz  2  3  4  5  6  7  8  9 10 11 12  ║          │
          ║  2  1  1  1  1  1  1  2  2  2  2  2 │  17  5  5  7 10 10 10 10 14 14 17 17  ║          │
          ║  3  1  1  1  2  2  2  2  2  3  3  3 │  18  6  6  8 11 11 11 11 14 14 18 18  ║──────────┘
┌LA───────║  4  1  2  2  2  2  3  3  3  3  4  4 │  19  6  6  8 11 11 11 11 15 15 19 19  ║──────────┐
│A 20/20  ║  5  1  2  2  3  3  3  3  4  4  5  5 │  20  6  6  9 12 12 12 12 16 16 20 20  ║BV 1897   │
│█████████║  6  2  2  3  3  4  4  4  5  5  6  6 │  21  7  7  9 13 13 13 13 17 17 21 21  ║          │
│I 10/10  ║  7  2  2  3  4  4  4  4  6  6  7  7 │  22  7  7  9 14 14 14 14 18 18 22 22  ║──────────┘
│█████████║  8  2  3  3  4  4  5  5  6  7  8  8 │  23  7  7 10 15 15 15 15 19 19 23 23  ║──────────┐
│         ║  9  3  3  4  5  5  5  5  7  7  9  9 │  24  8  8 10 16 16 16 16 20 20 24 24  ║          │
│         ║ 10  3  3  4  6  6  6  6  8  8 10 10 │  25  8  8 10 16 16 16 16 21 21 25 25  ║          │
│         ║ 11  4  4  5  7  7  7  7  9  9 11 11 │  26  9  9 11 17 17 17 17 21 21 26 26  ║          │
│         ║ 12  4  4  5  8  8  8  8 10 10 12 12 │  27  9  9 11 17 17 17 17 22 22 27 27  ║──────────┘
│         ║ 13  4  4  5  8  8  8  8 11 11 13 13 │  28  9  9 11 17 17 17 17 23 23 28 28  ║──────────┐
│         ║ 14  5  5  6  9  9  9  9 11 11 14 14 │  29 10 10 12 18 18 18 18 23 23 29 29  ║/msl      │
└─────────║ 15  5  5  6  9  9  9  9 12 12 15 15 │  30 10 10 12 18 18 18 18 24 24 30 30  ║          │
          ║ 16  5  5  7 10 10 10 10 13 13 16 16 │  40 12 12 18 24 24 24 24 32 32 40 40  ║          │
          ║  7 = median roll; yellow = selected weapon's rack                           ║          │
          ║                                                                             ║          │
          ║[Tab] switch page   [Esc] close                                              ║          │
          ╚═════════════════════════════════════════════════════════════════════════════╝          │
            │          │            │          │            │──────────────────────────────────────│
            │          │            │          │            │ LRM 20   range 7/14/21   ammo LT 6/6 │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
