crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_engine_destroyed_banner.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1067
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20   eng +15       │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐╔══════════════════════════════════╗┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   │║                                  ║│A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████│║                                  ║│██████████││ ░░░░░░   unhurt                      │
│I 10/10   │║                                  ║│I 10/10   │└──────────────────────────────────────┘
│██████████│║                                  ║│██████████│┌ MOVE ────────────────────────────────┐
│          │║         *** DESTROYED ***        ║│          ││ ** IMMOBILE **  wrecked              │
│          │║        (engine destroyed)        ║│          ││ stationary  TMM -4   [v]             │
│          │║                                  ║│          ││ standing                             │
│          │║                                  ║│          │└──────────────────────────────────────┘
│          │║                                  ║│          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          │║                                  ║│          ││ AC/20           RT  H7    20         │
└──────────┘╚══════════════════════════════════╝└──────────┘│                                      │
            ┌LL────────┐            ┌RL────────┐            │                                      │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
