crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_equipment_active_states.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐┌CT────────┐┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████││██████████││██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6     ││R 6/6     ││R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││██████████││██████████││██████████││██████████│┌ MOVE ────────────────────────────────┐
│          ││I 10/10   ││I 10/10   ││I 10/10   ││          ││ Walk 3  Run 6  Jump 0  MASC↑         │
│          ││██████████││██████████││██████████││          ││ stationary   [v]                     │
│          ││          ││          ││          ││          ││ standing                             │
│          ││          ││          ││          ││          │└──────────────────────────────────────┘
│          ││          ││          ││          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          ││          ││          ││          ││ Ultra AC/20     RT  H8    20     JAM │
└──────────┘└──────────┘└──────────┘└──────────┘└──────────┘│▶MASC               CT  ● ON          │
            ┌LL────────┐            ┌RL────────┐            │ ECM Suite (Guardi… LT                │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │──────────────────────────────────────│
            │          │            │          │            │ MASC   equipment · CT                │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 MASC engaged | Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
