crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_gator_to_hit_target.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1459
expression: screen
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐┌CT────────┐┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████││██████████││██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6     ││R 6/6     ││R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││██████████││██████████││██████████││██████████│┌ MOVE ────────────────────────────────┐
│          ││I 10/10   ││I 10/10   ││I 10/10   ││          ││ Walk 3  Run 5  Jump 0                │
│          ││██████████││██████████││██████████││          ││ stationary   [v]                     │
│          ││          ││          ││          ││          ││ standing                             │
│          ││          ││          ││          ││          │└──────────────────────────────────────┘
│          ││          ││          ││          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          ││          ││          ││          ││▶Medium Laser    RA  H3    5      8+  │
└──────────┘└──────────┘└──────────┘└──────────┘└──────────┘│ AC/20 Ammo       10/10               │
            ┌LL────────┐            ┌RL────────┐            │                                      │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │──────────────────────────────────────│
            │          │            │          │            │ Medium Laser   to-hit 8+ (G4 tgt +2 M│
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
